--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="no-js" lang="">
+<html>
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    <title>SaaSpal - SaaS and Software Landing Page Template</title>
+    <title>VeBUS</title>
     <meta name="description" content="" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
@@ -55,7 +55,11 @@
             <div class="col-lg-12">
               <nav class="navbar navbar-expand-lg">
                 <a class="navbar-brand" href="index.html">
-                  <img src="assets/img/logo/logo.svg" alt="Logo" />
+                  <img
+                    class="logo"
+                    src="assets/img/logo/VeBUS.png"
+                    alt="Logo"
+                  />
                 </a>
                 <button
                   class="navbar-toggler"
@@ -92,9 +96,6 @@
                     <li class="nav-item">
                       <a href="javascript:void(0)">Pricing</a>
                     </li>
-                    <li class="nav-item">
-                      <a href="javascript:void(0)">Clients</a>
-                    </li>
                   </ul>
                 </div>
                 <!-- navbar collapse -->
@@ -114,29 +115,33 @@
     <section id="home" class="hero-section">
       <div class="container">
         <div class="row align-items-center position-relative">
-          <div class="col-lg-6">
+          <div class="col-lg-8">
             <div class="hero-content">
               <h1 class="wow fadeInUp" data-wow-delay=".4s">
-                Your using free lite version
+                VeBUS <br />
+                Your Personal AI Powered Business Utility Suite
               </h1>
               <p class="wow fadeInUp" data-wow-delay=".6s">
-                Please, purchase full version to get all sections, features and
-                permission to remove footer credit.
+                Your "very effective business utility suite" workspace.
               </p>
-              <a
+              <!-- <a
                 href="javascript:void(0)"
                 class="main-btn border-btn btn-hover wow fadeInUp"
                 data-wow-delay=".6s"
                 >Purchase Now</a
-              >
+              > -->
               <a href="#features" class="scroll-bottom">
                 <i class="lni lni-arrow-down"></i
               ></a>
             </div>
           </div>
-          <div class="col-lg-6">
+          <div class="col-lg-2">
             <div class="hero-img wow fadeInUp" data-wow-delay=".5s">
-              <img src="assets/img/hero/hero-img.png" alt="" />
+              <img
+                class="img-hero"
+                src="assets/img/hero/Site Stats-bro.png"
+                alt=""
+              />
             </div>
           </div>
         </div>
@@ -151,42 +156,51 @@
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
               <div class="icon">
-                <i class="lni lni-bootstrap"></i>
+                <img
+                  class="feature-img"
+                  src="assets/img/features/page_talk.png"
+                  alt="Bootstrap Image"
+                />
               </div>
               <div class="content">
-                <h3>Bootstrap 5</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
-                </p>
+                <h3>Page Talk</h3>
+                <!-- <p>
+              An AI-powered document summarization tool that provides concise summaries of lengthy documents, while also enabling interactive conversations within PDF files.
+            </p> -->
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
               <div class="icon">
-                <i class="lni lni-layout"></i>
+                <img
+                  class="feature-img"
+                  src="assets/img/features/note_sync.jpeg"
+                  alt="Clean Design Image"
+                />
               </div>
               <div class="content">
-                <h3>Clean Design</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
-                </p>
+                <h3>Note Sync</h3>
+                <!-- <p>
+              A dynamic note-taking app designed for seamless collaboration and productivity, offering real-time editing and a range of utility features for efficient note management.
+            </p> -->
               </div>
             </div>
           </div>
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
               <div class="icon">
-                <i class="lni lni-coffee-cup"></i>
+                <img
+                  class="feature-img"
+                  src="assets/img/features/voice_sync.jpg"
+                  alt="Easy to Use Image"
+                />
               </div>
               <div class="content">
-                <h3>Easy to Use</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore
-                </p>
+                <h3>Voice Sync</h3>
+                <!-- <p>
+              A utility that simplifies note-taking by transcribing speech, particularly useful for capturing meeting minutes (MOMs) effortlessly.
+            </p> -->
               </div>
             </div>
           </div>
@@ -218,21 +232,24 @@
             <div class="about-content">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Perfect Solution Thriving Online Business
+                  Page Talk
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  dinonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam erat, sed diam voluptua. At vero eos et accusam et
-                  justo duo dolores et ea rebum. Stet clita kasd gubergren, no
-                  sea takimata sanctus est Lorem.Lorem ipsum dolor sit amet.
+                  Page Talk is an AI-powered document summarization tool that
+                  provides concise summaries of lengthy documents, while also
+                  enabling interactive conversations within PDF files
                 </p>
               </div>
+              <ul>
+                <li>Quick Access</li>
+                <li>Easily to Manage</li>
+              </ul>
               <a
-                href="javascript:void(0)"
+                href="https://impetus-page-talk.vercel.app/"
+                target="_blank"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
-                >Discover More</a
+                >Try Now</a
               >
             </div>
           </div>
@@ -249,24 +266,24 @@
             <div class="about-content">
               <div class="section-title mb-30">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Easy to Use with Tons of Awesome Features
+                  Note Sync
                 </h2>
                 <p class="wow fadeInUp" data-wow-delay=".4s">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                  aliquyam erat, sed diam voluptua.
+                  Note Sync is a dynamic note-taking app designed for seamless
+                  collaboration and productivity, offering real-time editing and
+                  a range of utility features for efficient note management.
                 </p>
               </div>
               <ul>
                 <li>Quick Access</li>
                 <li>Easily to Manage</li>
-                <li>24/7 Support</li>
               </ul>
               <a
-                href="javascript:void(0)"
+                href="https://impetus-notes-sync.vercel.app/"
+                target="_blank"
                 class="main-btn btn-hover border-btn wow fadeInUp"
                 data-wow-delay=".6s"
-                >Learn More</a
+                >Try Now</a
               >
             </div>
           </div>
@@ -290,6 +307,55 @@
     </section>
     <!-- ======== about2-section end ======== -->
 
+    <!-- ======== about3-section start ======== -->
+    <section id="about" class="about-section pt-150">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-xl-6 col-lg-6">
+            <div class="about-img">
+              <img src="assets/img/about/about-1.png" alt="" class="w-100" />
+              <img
+                src="assets/img/about/about-left-shape.svg"
+                alt=""
+                class="shape shape-1"
+              />
+              <img
+                src="assets/img/about/left-dots.svg"
+                alt=""
+                class="shape shape-2"
+              />
+            </div>
+          </div>
+          <div class="col-xl-6 col-lg-6">
+            <div class="about-content">
+              <div class="section-title mb-30">
+                <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
+                  Voice Sync
+                </h2>
+                <p class="wow fadeInUp" data-wow-delay=".4s">
+                  Voice Sync simplifies note-taking by transcribing speech,
+                  particularly useful for capturing meeting minutes (MOMs)
+                  effortlessly.
+                </p>
+              </div>
+              <ul>
+                <li>Quick Access</li>
+                <li>Easily to Manage</li>
+              </ul>
+              <a
+                href="javascript:void(0)"
+                target="_blank"
+                class="main-btn btn-hover border-btn wow fadeInUp"
+                data-wow-delay=".6s"
+                >Try Now</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- ======== about3-section end ======== -->
+
     <!-- ======== feature-section start ======== -->
     <section id="why" class="feature-extended-section pt-100">
       <div class="feature-extended-wrapper">
@@ -298,12 +364,12 @@
             <div class="col-xxl-5 col-xl-6 col-lg-8 col-md-9">
               <div class="section-title text-center mb-60">
                 <h2 class="mb-25 wow fadeInUp" data-wow-delay=".2s">
-                  Why Choose SaaSpal
+                  Why Choose VeBUS
                 </h2>
-                <p class="wow fadeInUp" data-wow-delay=".4s">
+                <!-- <p class="wow fadeInUp" data-wow-delay=".4s">
                   Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
                   diam nonumy eirmod tempor invidunt ut labore et dolore
-                </p>
+                </p> -->
               </div>
             </div>
           </div>
@@ -312,27 +378,14 @@
             <div class="col-lg-4 col-md-6">
               <div class="single-feature-extended">
                 <div class="icon">
-                  <i class="lni lni-display"></i>
+                  <i class="lni lni-grid-alt"></i>
                 </div>
                 <div class="content">
-                  <h3>SaaS Focused</h3>
+                  <h3>AI-powered Document Summarization</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col-lg-4 col-md-6">
-              <div class="single-feature-extended">
-                <div class="icon">
-                  <i class="lni lni-leaf"></i>
-                </div>
-                <div class="content">
-                  <h3>Awesome Design</h3>
-                  <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                    VeBUS uses AI and LLMs to analyze documents and generate
+                    concise, accurate summaries. This helps users quickly grasp
+                    key points and save valuable time.
                   </p>
                 </div>
               </div>
@@ -343,10 +396,12 @@
                   <i class="lni lni-grid-alt"></i>
                 </div>
                 <div class="content">
-                  <h3>Ready to Use</h3>
+                  <h3>Dynamic Note-taking with Rich Features</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                    eBUS offers a comprehensive note-taking app (NoteSync) with
+                    features like rich text formatting, organization tools, and
+                    collaboration functions. Users can create notes, share them
+                    with colleagues, and work together seamlessly in real-time.
                   </p>
                 </div>
               </div>
@@ -354,13 +409,32 @@
             <div class="col-lg-4 col-md-6">
               <div class="single-feature-extended">
                 <div class="icon">
-                  <i class="lni lni-javascript"></i>
+                  <i class="lni lni-grid-alt"></i>
                 </div>
                 <div class="content">
-                  <h3>Vanilla JS</h3>
+                  <h3>Effortless Voice Note Capture</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                    VeBUS streamlines voice note-taking with VoiceSync, a
+                    dedicated voice recording app. VoiceSync features accurate
+                    voice-to-text transcription, allowing users to capture ideas
+                    on-the-go and easily convert them into searchable text
+                    notes.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-4 col-md-6">
+              <div class="single-feature-extended">
+                <div class="icon">
+                  <i class="lni lni-leaf"></i>
+                </div>
+                <div class="content">
+                  <h3>Seamless Integration with Existing Tools</h3>
+                  <p>
+                    VeBUS integrates with popular calendars, project management
+                    platforms, and email services. This streamlines workflows
+                    and allows users to access and manage their notes and
+                    recordings within their existing work environment.
                   </p>
                 </div>
               </div>
@@ -371,10 +445,13 @@
                   <i class="lni lni-layers"></i>
                 </div>
                 <div class="content">
-                  <h3>Essential Sections</h3>
+                  <h3>Customization Options (Business & Enterprise)</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                    VeBUS caters to individual and organizational preferences.
+                    Business and Enterprise plans offer customization options
+                    like preferred document types for analysis (PageTalk) and
+                    custom branding to align VeBUS with your company's identity
+                    (NoteSync & VoiceSync).
                   </p>
                 </div>
               </div>
@@ -385,10 +462,11 @@
                   <i class="lni lni-rocket"></i>
                 </div>
                 <div class="content">
-                  <h3>Highly Optimized</h3>
+                  <h3>Scalability for Growing Teams (Enterprise)</h3>
                   <p>
-                    Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                    diam nonumy eirmod tempor invidunt ut labore
+                    The Enterprise plan of VeBUS is designed to handle large
+                    user bases and data volumes. This ensures smooth operation
+                    and efficient performance as your organization grows.
                   </p>
                 </div>
               </div>
@@ -399,55 +477,19 @@
     </section>
     <!-- ======== feature-section end ======== -->
 
-    <!-- ======== subscribe-section start ======== -->
-    <section id="contact" class="subscribe-section pt-120">
-      <div class="container">
-        <div class="subscribe-wrapper img-bg">
-          <div class="row align-items-center">
-            <div class="col-xl-6 col-lg-7">
-              <div class="section-title mb-15">
-                <h2 class="text-white mb-25">Subscribe Our Newsletter</h2>
-                <p class="text-white pr-5">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  diam nonumy eirmod tempor
-                </p>
-              </div>
-            </div>
-            <div class="col-xl-6 col-lg-5">
-              <form action="#" class="subscribe-form">
-                <input
-                  type="email"
-                  name="subs-email"
-                  id="subs-email"
-                  placeholder="Your Email"
-                />
-                <button type="submit" class="main-btn btn-hover">
-                  Subscribe
-                </button>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- ======== subscribe-section end ======== -->
-
     <!-- ======== footer start ======== -->
     <footer class="footer">
       <div class="container">
         <div class="widget-wrapper">
           <div class="row">
             <div class="col-xl-4 col-lg-4 col-md-6">
-              <div class="footer-widget">
+              <div class="footer-widget justify-content-center">
                 <div class="logo mb-30">
                   <a href="index.html">
-                    <img src="assets/img/logo/logo.svg" alt="" />
+                    <img src="assets/img/logo/VeBUS_1.png" alt="" />
                   </a>
                 </div>
-                <p class="desc mb-30 text-white">
-                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-                  dinonumy eirmod tempor invidunt.
-                </p>
+                <h1 class="desc mb-30 justify-content-center text-white">VeBUS</h1>
                 <ul class="socials">
                   <li>
                     <a href="jvascript:void(0)">
