--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
               </div>
               <div class="content">
                 <h3>Page Talk</h3>
-                <!-- <p>
-              An AI-powered document summarization tool that provides concise summaries of lengthy documents, while also enabling interactive conversations within PDF files.
-            </p> -->
+                <p>
+              An AI-powered document summarization tool.
+            </p>
               </div>
             </div>
           </div>
@@ -181,9 +181,9 @@
               </div>
               <div class="content">
                 <h3>Note Sync</h3>
-                <!-- <p>
-              A dynamic note-taking app designed for seamless collaboration and productivity, offering real-time editing and a range of utility features for efficient note management.
-            </p> -->
+                <p>
+              A dynamic note-taking app.
+            </p>
               </div>
             </div>
           </div>
@@ -198,9 +198,9 @@
               </div>
               <div class="content">
                 <h3>Voice Sync</h3>
-                <!-- <p>
-              A utility that simplifies note-taking by transcribing speech, particularly useful for capturing meeting minutes (MOMs) effortlessly.
-            </p> -->
+                <p>
+              Simplifies note-taking by transcribing speech.
+            </p>
               </div>
             </div>
           </div>
@@ -215,7 +215,7 @@
         <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6">
             <div class="about-img">
-              <img src="assets/img/about/about-1.png" alt="" class="w-100" />
+              <img src="assets/img/about/page_talk.png" alt="" class="w-100 border-btn" />
               <img
                 src="assets/img/about/about-left-shape.svg"
                 alt=""
@@ -241,8 +241,8 @@
                 </p>
               </div>
               <ul>
-                <li>Quick Access</li>
-                <li>Easily to Manage</li>
+                <li>Quick Document Summarisation</li>
+                <li>Interact with pdf and easily export to Note Sync.</li>
               </ul>
               <a
                 href="https://impetus-page-talk.vercel.app/"
@@ -275,8 +275,8 @@
                 </p>
               </div>
               <ul>
-                <li>Quick Access</li>
-                <li>Easily to Manage</li>
+                <li>Dynamic Note taking.</li>
+                <li>Easily collaborate with people to write notes.</li>
               </ul>
               <a
                 href="https://impetus-notes-sync.vercel.app/"
@@ -289,7 +289,7 @@
           </div>
           <div class="col-xl-6 col-lg-6 order-first order-lg-last">
             <div class="about-img-2">
-              <img src="assets/img/about/about-2.png" alt="" class="w-100" />
+              <img src="assets/img/about/note_sync.png" alt="" class="w-100 border-btn" />
               <img
                 src="assets/img/about/about-right-shape.svg"
                 alt=""
@@ -313,7 +313,7 @@
         <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6">
             <div class="about-img">
-              <img src="assets/img/about/about-1.png" alt="" class="w-100" />
+              <img src="assets/img/about/page_talk.png" alt="" class="w-100 border-btn" />
               <img
                 src="assets/img/about/about-left-shape.svg"
                 alt=""
@@ -339,8 +339,8 @@
                 </p>
               </div>
               <ul>
-                <li>Quick Access</li>
-                <li>Easily to Manage</li>
+                <li>Take MOMs effortlessly.</li>
+                <li>Export the Speech to text to Note Sync and make notes.</li>
               </ul>
               <a
                 href="javascript:void(0)"
@@ -384,8 +384,7 @@
                   <h3>AI-powered Document Summarization</h3>
                   <p>
                     VeBUS uses AI and LLMs to analyze documents and generate
-                    concise, accurate summaries. This helps users quickly grasp
-                    key points and save valuable time.
+                    concise, accurate summaries.
                   </p>
                 </div>
               </div>
@@ -400,8 +399,7 @@
                   <p>
                     eBUS offers a comprehensive note-taking app (NoteSync) with
                     features like rich text formatting, organization tools, and
-                    collaboration functions. Users can create notes, share them
-                    with colleagues, and work together seamlessly in real-time.
+                    collaboration functions.
                   </p>
                 </div>
               </div>
@@ -415,10 +413,7 @@
                   <h3>Effortless Voice Note Capture</h3>
                   <p>
                     VeBUS streamlines voice note-taking with VoiceSync, a
-                    dedicated voice recording app. VoiceSync features accurate
-                    voice-to-text transcription, allowing users to capture ideas
-                    on-the-go and easily convert them into searchable text
-                    notes.
+                    dedicated voice recording app.
                   </p>
                 </div>
               </div>
@@ -431,8 +426,7 @@
                 <div class="content">
                   <h3>Seamless Integration with Existing Tools</h3>
                   <p>
-                    VeBUS integrates with popular calendars, project management
-                    platforms, and email services. This streamlines workflows
+                    This streamlines workflows
                     and allows users to access and manage their notes and
                     recordings within their existing work environment.
                   </p>
@@ -448,10 +442,7 @@
                   <h3>Customization Options (Business & Enterprise)</h3>
                   <p>
                     VeBUS caters to individual and organizational preferences.
-                    Business and Enterprise plans offer customization options
-                    like preferred document types for analysis (PageTalk) and
-                    custom branding to align VeBUS with your company's identity
-                    (NoteSync & VoiceSync).
+                    Business and Enterprise plans offer customization options.
                   </p>
                 </div>
               </div>
@@ -465,8 +456,7 @@
                   <h3>Scalability for Growing Teams (Enterprise)</h3>
                   <p>
                     The Enterprise plan of VeBUS is designed to handle large
-                    user bases and data volumes. This ensures smooth operation
-                    and efficient performance as your organization grows.
+                    user bases and data volumes.
                   </p>
                 </div>
               </div>
@@ -515,7 +505,7 @@
               </div>
             </div>
 
-            <div class="col-xl-2 col-lg-2 col-md-6">
+            <div class="col-xl-2 col-lg-3 col-md-6">
               <div class="footer-widget">
                 <h3>About Us</h3>
                 <ul class="links">
@@ -527,7 +517,7 @@
               </div>
             </div>
 
-            <div class="col-xl-3 col-lg-3 col-md-6">
+            <div class="col-xl-3 col-lg-5 col-md-6">
               <div class="footer-widget">
                 <h3>Features</h3>
                 <ul class="links">
@@ -539,7 +529,7 @@
               </div>
             </div>
 
-            <div class="col-xl-3 col-lg-3 col-md-6">
+            <!-- <div class="col-xl-3 col-lg-3 col-md-6">
               <div class="footer-widget">
                 <h3>Other Products</h3>
                 <ul class="links">
@@ -548,7 +538,7 @@
                   <li><a href="jvascript:void(0)">Booking System</a></li>
                   <li><a href="jvascript:void(0)">Tracking System</a></li>
                 </ul>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
