Update links in index.html to open in a new tab

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
-              <a href="https://impetus-page-talk.vercel.app" >
+              <a href="https://impetus-page-talk.vercel.app" target="_blank" >
               <div class="icon">
                 <img
                   class="feature-img"
@@ -176,7 +176,7 @@
           </div>
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
-              <a href="https://impetus-notes-sync.vercel.app">
+              <a href="https://impetus-notes-sync.vercel.app" target="_blank">
               <div class="icon">
                 <img
                   class="feature-img"
