--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
         <div class="row align-items-center">
           <div class="col-xl-6 col-lg-6">
             <div class="about-img">
-              <img src="assets/img/about/page_talk.png" alt="" class="w-100 border-btn" />
+              <img src="assets/img/about/image.png" alt="" class="w-100 border-btn" />
               <img
                 src="assets/img/about/about-left-shape.svg"
                 alt=""
