--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
           </div>
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
-              <a href="javascript:void(0)">
+              <a href="https://impetus-voice-sync.vercel.app">
               <div class="icon">
                 <img
                   class="feature-img"
