--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
           </div>
           <div class="col-lg-4 col-md-8 col-sm-10">
             <div class="single-feature">
-              <a href="https://impetus-notes-sync.vercel.app" target="_blank">
+              <a href="https://notesync-app.vercel.app" target="_blank">
               <div class="icon">
                 <img
                   class="feature-img"
